# partygame

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS.md  LICENSE  README.md  SPEC.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-images.yml
.hooks/: prettier-wrapper.sh
api/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260424_0001_create_game_definitions.py  20260424_0002_add_users_and_definition_access.py  20260427_0003_fix_blank_definition_ids.py
api/games/: quiz_demo.json
api/partygame/: __init__.py
api/partygame/api/: deps.py
api/partygame/api/api_v1/: api.py
api/partygame/api/api_v1/endpoints/: auth.py  definitions.py  game.py  lobby.py  media.py
api/partygame/core/: config.py
api/partygame/db/: postgres.py  redis.py
api/partygame/schemas/: __init__.py  auth.py  buzzer.py  events.py  game.py  game_definition.py  lobby.py  media.py
api/partygame/service/: __init__.py  auth.py  definition_archive.py  definitions.py  game.py  lobby.py  media.py  player.py  realtime.py
api/partygame/service/components/: __init__.py  base_class.py  buzzer.py  empty.py
api/partygame/service/game/: __init__.py  base_class.py  buzzer_game.py
api/partygame/service/runtime/: __init__.py  components.py  evaluators.py  protocols.py  scheduler.py
api/partygame/state/: __init__.py  auth_models.py  definition_models.py  keys.py  models.py  repo.py
api/partygame/utils/: __init__.py  utils.py
api/tests/: test_auth.py  test_definitions.py  test_evaluators.py  test_game_runtime.py  test_lobby_join.py  test_media_api.py  test_player_controller.py  test_state_keys.py  test_state_repo_cleanup.py
frontend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: ambient.d.ts  app.css  app.html
frontend/src/lib/: auth-store.ts  avatar-presets.ts  controller-store.ts  game-store.ts  haptics.test.ts  haptics.ts  i18n.ts  local-storage-store.ts  qr-code.ts  reactions.ts  reconnecting-websocket.ts  reveal-format.test.ts  reveal-format.ts  runtime-sync.ts  sound-detector.ts  sound-player.ts  sound-policy.ts  sound-runtime.test.ts  sound-runtime.ts  sound-settings.ts  sound-system.ts
frontend/src/lib/components/: AudioQuestionMedia.svelte  Avatar.svelte  AvatarCropEditor.svelte  GameConnectionStatus.svelte  ImageQuestionMedia.svelte  (+8 more)
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
gateway/: nginx.conf
(+69 files in other folders)
