[tool.poetry]
name = "partygame"
version = "0.1.0"
description = ""
authors = ["jaagupku <jaagupku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.109.0"
pydantic = "^2.9.0"
redis = "^5.2.0"
uvicorn = {version = "^0.28.0"}
pydantic-settings = "^2.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.13"
mypy = "^1.7.1"

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
