[tool.poetry]
name = "partygame"
version = "0.1.0"
description = ""
authors = ["jaagupku <jaagupku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.129.2"
pydantic = "^2.12.5"
redis = "^7.2.0"
uvicorn = {version = "^0.41.0", extras = ["standard"]}
pydantic-settings = "^2.3.0"
sqlalchemy = {version = "^2.0.49", extras = ["asyncio"]}
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pwdlib = {version = "^0.3.0", extras = ["argon2"]}


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.11"
mypy = "^1.20.2"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
